# kenkui

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  add_cover.py  get_toc.py  install.ps1  install.sh  pyproject.toml  setup.py
docs/superpowers/plans/: 2026-03-27-all-settings-upfront-flow.md
docs/superpowers/specs/: 2026-03-27-all-settings-upfront-flow-design.md
kenkui/: helpers.py  run.py  workers.py
src/: __main__.py  parsing.py
src/kenkui/: __init__.py  __main__.py  api_client.py  app.py  booknlp_processor.py  chapter_classifier.py  chapter_filter.py  chapter_selector.py  cli.py  config.py  file_finder.py  fix_audiobook.py  helpers.py  huggingface_auth.py  log.py  models.py  parsing.py  post_processing.py  processor.py  queue.py  screens.py  series.py  utils.py  voice_download.py  voice_loader.py  voice_registry.py  widgets.py  workers.py
src/kenkui/cli/: __init__.py  add.py  config.py  queue.py  voices.py
src/kenkui/nlp/: __init__.py  _filters.py  attribution.py  booknlp_roster.py  chunker.py  entities.py  llm.py  models.py  quotes.py  setup.py
src/kenkui/readers/: __init__.py  epub.py  fb2.py  mobi.py
src/kenkui/server/: __init__.py  api.py  server.py  tasks.py  worker.py
src/kenkui/services/: auth_service.py  book_cache.py  book_service.py  download_service.py  nlp_service.py  series_service.py  voice_service.py
src/kenkui/voices/: download.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_client_new_methods.py  test_api_new_routes.py  test_auth_service.py  test_book_cache.py  test_book_service.py  test_booknlp_processor.py  test_chapter_classifier.py  test_chapter_filter.py  test_cli.py  test_cli_flags.py  test_config_commands.py  test_download_service.py  test_full_flow.py  test_huggingface_auth.py  test_models.py  test_multi_voice_models.py  test_name_filters.py  test_nlp_attribution.py  test_nlp_booknlp_roster.py  test_nlp_chunker.py  test_nlp_entities.py  test_nlp_pipeline_split.py  test_nlp_quotes.py  test_nlp_segments.py  test_nlp_service.py  test_parsing.py  test_post_processing.py  test_queue_pipeline.py  test_queue_progress.py  test_series.py  test_series_service.py  test_suggest_cast.py  test_tasks.py  test_utils.py  test_voice_download.py  test_voice_pools.py  test_voice_review_ux.py  (+6 more)
tests/test_worker_server/: __init__.py  test_worker_server.py
