[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kenkui"
version = "0.7.0"
description = "Convert Ebooks to Audiobooks with [custom] voice samples"
readme = "README.md"
authors = [{ name = "Sumner MacArthur", email = "spn1kolat3sla@gmail.com" }]
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  "beautifulsoup4>=4.14.0",
  "EbookLib>=0.20",
  "rich>=14.2.0",
  "scipy>=1.17.0",
  "huggingface_hub>=1.3.0",
  "pydub>=0.25.0",
  "pocket-tts>=1.0.0",
  "mutagen>=1.45.0",
  "imageio-ffmpeg>=0.5.0",
]

scripts = { kenkui = "kenkui.cli:main" }

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.urls]
"Homepage" = "https://github.com/D1zzl3D0p/kenkui"
"Bug Tracker" = "https://github.com/D1zzl3D0p/kenkui/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kenkui.samples" = ["*.epub"]
"kenkui.voices" = ["*.wav"]
